--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-prc-rs = "1.3"
+prc-rs = { version = "1.3", features = ["xml"] }
 thiserror = "1.0.30"
 lazy_static = "1.4.0"
 parking_lot = "0.12.0"
