--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 
 [dependencies]
 # prc-rs = { version = "1.3", features = ["xml"] }
-prc-rs = { git = "https://github.com/blu-dev/prc-rs", branch = "comments-handled" }
+prc-rs = { git = "https://github.com/blu-dev/prc-rs", branch = "comments-handled", features = ["xml"] }
 thiserror = "1.0.30"
 lazy_static = "1.4.0"
 parking_lot = "0.12.0"
